src/test/deca/context/valid/controle_structures/simple_if_else.deca
// Description:
//    Test de controle structure if and else simple
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur 
//    context: pas d'erreur , tout variables declarées ,condition bien respectée   
//
// Historique:
//    cree le 14/01/2022

{
    int x = 4 ; 
    int y = 5 ; 
    boolean condition = true  ;
    if(  condition == true  )
    {
        x = x + 1 ;

    }
    else
    {
        y = y + 1 ;
    }
    
}